--- a/MtdrSpring/backend/minikube/win-todolistapp-springboot.yaml
+++ b/MtdrSpring/backend/minikube/win-todolistapp-springboot.yaml
@@ -51,7 +51,7 @@ spec:
             - name: db_user
               value: "TODOUSER"
             - name: db_url
-              value: "jdbc:oracle:thin:@aoruizatp_tp?TNS_ADMIN=/mtdrworkshop/creds"
+              value: "jdbc:oracle:thin:@reacttododtzw3_tp?TNS_ADMIN=/mtdrworkshop/creds"
             - name: todo.table.name
               value: "todoitem"
             - name: driver_class_name
